--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,27 @@
   display: none;
 }
 
+.slider {
+  cursor: pointer;
+  -webkit-appearance: none;
+  height: 4px;
+  width: 120px;
+  background: linear-gradient(90deg, #F2F2F2 50%, #F2F2F2 50%);
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0px 0px 1px 0px black;
+}
+
+  .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 10px;
+    background: #FFFFFF;
+    border: 3px solid #28B759;
+    border-radius: 100%;
+  }
+  
 .range-bar {
   cursor: pointer;
   position: relative;
