--- a/style/style.css
+++ b/style/style.css
@@ -46,51 +46,24 @@
 }
 
 .slider {
-  cursor: pointer;
   -webkit-appearance: none;
   height: 4px;
   width: 120px;
-  background: linear-gradient(90deg, #F2F2F2 50%, #F2F2F2 50%);
+  background: linear-gradient(90deg, #f2f2f2 50%, #f2f2f2 50%);
   outline: none;
   border-radius: 2px;
   box-shadow: 0px 0px 1px 0px black;
 }
 
-  .slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-    appearance: none;
-    width: 10px;
-    height: 10px;
-    background: #FFFFFF;
-    border: 3px solid #28B759;
-    border-radius: 100%;
-  }
-  
-.range-bar {
+.slider::-webkit-slider-thumb {
   cursor: pointer;
-  position: relative;
-  width: 120px;
-  height: 4px;
-  background: #F2F2F2;
-  border-radius: 2px;
-}
-
-.range-tracker {
-  width: 50%;
-  height: 100%;
-  background: #28B759;
-  border-radius: 2px;
-}
-
-.range-thumb {
-  position: absolute;
-  top: -3px;
-  left: 48%;
+  -webkit-appearance: none;
+  appearance: none;
   width: 10px;
   height: 10px;
-  background: #FFFFFF;
-  border-radius: 100%;
-  border: 3px solid #35BB63;
+  background: #ffffff;
+  border: 3px solid #28b759;
+  border-radius: 50%;
 }
 
 .bottom {
